tests/operator/add_nil_nil.out
[31merror[error]: unsupported operand type(s) for +: 'NoneType' and 'NoneType'
----- Traceback -----
  ┌─ <unknown>:1:11
  | 
1 | print(None+None)
  |            ^
[0m